--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="story001.html">The Adventure of Karl and the Magic Forest</a></li>
                 <li><a href="story002.html">The Guardian of the Skogsrå</a></li>
                 <li><a href="story003.html">Melodies by the Lake: A Swedish Love Story</a></li>
-                <li><a href="post4.html">Title of Blog Post 4</a></li>
+                <li><a href="story004.html">The Battle for Eldoria</a></li>
                 <li><a href="post5.html">Title of Blog Post 5</a></li>
                 <!-- Add more blog post links here -->
             </ul>
